# wwsim

./: Cargo.toml
data/: closest.csv  country_data.csv  gamestate.json  log.csv
src/: game_utils.rs  gamestate_reader.rs  main.rs  utils.rs
