[package]
name = "wwsim"
version = "0.1.0"
authors = ["agubelu <agustinbd3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
counter = "0.4.3"